output, help, documentation, maven package goal
-Output to csv file has been added
-A help/usage message is printed to indicate proper CLI usage
-Maven package goal has been updated to generate a runnable jar with a
short name
-Documentation/javadoc has been updated